--- a/src/app/_components/loading-box/loading-box.component.html
+++ b/src/app/_components/loading-box/loading-box.component.html
@@ -1,13 +1,3 @@
-<div class="cube">
-  <div class="sk-cube-grid" color="primary">
-    <div class="sk-cube mat-elevation-z7 sk-cube1"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube2"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube3"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube4"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube5"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube6"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube7"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube8"></div>
-    <div class="sk-cube mat-elevation-z7 sk-cube9"></div>
-  </div>
+<div class="loading">
+  <div class="spinner icon-spinner-3" aria-hidden="true"></div>
 </div>
