--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,11 +1,11 @@
 
 <div class="autocomplete wrap">
 
-  <form (ngSubmit)="onSubmit()" [formGroup]="filter">
+  <form [formGroup]="filter">
     
     <mat-form-field color="accent">
       <mat-label>Search characters</mat-label>
-      <input matInput type="text" autocomplete="off" formControlName="field">
+      <input matInput formControlName="field" type="text" autocomplete="off">
     </mat-form-field>
 
   </form>
@@ -14,16 +14,20 @@
 
 <div class="content wrap">
 
-  <mat-card *ngFor="let character of characters">
-  
-    <img mat-card-image src="{{ character?.id | idToImage }}" alt="{{ character?.name }}">
-
-    <mat-card-content>
+  <div matRipple *ngFor="let character of characters" #card [tilt]="card" (click)="selectCharacter(character)">
+    <mat-card>
+    
+      <img mat-card-image src="{{ character?.id | idToImage }}" alt="{{ character?.name }}">
       
-      <p>{{ character?.name }}</p>
+      <mat-card-content class="back">
+        <p>{{ character?.name }}</p>
+      </mat-card-content>
+
+      <mat-card-content class="front">
+        <p>{{ character?.name }}</p>
+      </mat-card-content>
   
-    </mat-card-content>
-  
-  </mat-card>
+    </mat-card>
+  </div>
 
 </div>
