--- a/src/app/characters/characters.component.scss
+++ b/src/app/characters/characters.component.scss
@@ -9,21 +9,93 @@
 
 }
 
-
 .content {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: space-between;
 
+
+
+  @keyframes opacity-animation {
+    0% {
+      opacity: 1;
+    }
+    
+    100% {
+      opacity: 0;
+    }
+  }
+
+  .mat-ripple:hover {
+    // animation-name: opacity-animation;
+    animation-duration: 1.5s; 
+    animation-timing-function: ease-out; 
+    animation-delay: 0s;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-fill-mode: none;
+    animation-play-state: running; 
+  }
+  
+  .focus-character {
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+  }
+  
+  .bounce {
+    animation-iteration-count: 1;
+    animation-duration: 1s !important; 
+  }
+  
+  
+  .mat-ripple {
+    margin: 10px 0;
+  }
+  
   .mat-card {
     width: 200px;
-    margin: 10px 0;
     cursor: pointer;
 
-    p {
+    .mat-card-content,
+    .mat-card-image {
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+
+    .back {
+      margin: -16px;
+      margin-top: -(52px + 16px + 100px);
+      padding: 16px;
+      padding-top: 16px + 100px;
+      background-image: linear-gradient(
+        0deg, 
+        black, black, black, black, black,
+        black, black, black, black, black,
+        rgba(black, 0.9), 
+        rgba(black, 0.8), 
+        rgba(black, 0.7), 
+        rgba(black, 0.6), 
+        rgba(black, 0.5), 
+        rgba(black, 0.4), 
+        rgba(black, 0.3), 
+        rgba(black, 0.2), 
+        rgba(black, 0.1), 
+        rgba(black, 0)
+      );
+      opacity: 0.5;
+      
+      p {
+        font-size: 16px;
+        visibility: hidden;
+      }
+    }
+    
+    .front {
+      position: relative;
+      z-index: 1;
       font-family: 'Rubik', sans-serif;
       font-size: 16px;
+      margin-top: -36px;
     }
+    
   }
 }
