chore: icon, logo, readme update

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   right: 0;
   z-index: 500;
-  
+
   .mat-fab {
     margin: 0 67px 50px 0;
   }
@@ -25,9 +25,14 @@
       display: flex;
     }
 
+    .mat-icon {
+      cursor: pointer;
+    }
+
     span {
       transform: translateY(3px);
       cursor: pointer;
+      margin-left: 12px;
     }
 
     .mat-icon-button {
