--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
   <mat-toolbar class="toolbar">
     <div class="wrap">
+      <mat-icon svgIcon="logo"></mat-icon>
       <span (click)="scrollTo(true)">One Piece</span>
       <button mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon>more_vert</mat-icon>
