fix: collapse showing with string length less than 250

--- a/src/app/_components/character/character.component.html
+++ b/src/app/_components/character/character.component.html
@@ -106,7 +106,7 @@
             </p>
             <p *ngIf="stringLength[i] !== 250" (click)="stringLength[i] = 250">
               {{ anime?.synopsis | sliceString: stringLength[i] }} 
-              <span class="link" (click)="stringLength[i] = 250"> collapse</span>
+              <span class="link" (click)="stringLength[i] = 250" *ngIf="anime?.synopsis.length > 250"> collapse</span>
             </p>
           </div>
           
