feat: about dialog & menu content

--- a/src/app/_components/character/character.component.html
+++ b/src/app/_components/character/character.component.html
@@ -144,7 +144,7 @@
 
         <p><strong>Rating rank: </strong><span>#{{ selectedMedia?.ratingRank }} </span></p>
         <p><strong>Popularity rank: </strong><span>#{{ selectedMedia?.popularityRank }} </span></p>
-        <p><strong>Rating: </strong><span>{{ selectedMedia?.averageRating }}</span></p>
+        <p><strong>Rating: </strong><span>{{ selectedMedia?.averageRating }}%</span></p>
         <p><strong>Status: </strong><span>{{ selectedMedia?.status }}</span></p>
         <p><strong>Rating guide: </strong><span>{{ selectedMedia?.ageRating }} - {{ selectedMedia?.ageRatingGuide }}</span></p>
         <!-- <p><strong>Duration: </strong><span>{{ selectedMedia?.totalLength }} mins</span></p> -->
