--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -14,7 +14,7 @@
 
 <div class="content wrap">
 
-  <div matRipple *ngFor="let character of characters" #card [tilt]="card" (click)="selectCharacter(character)">
+  <div matRipple *ngFor="let character of characters; trackBy: trackByID" #card [tilt]="card" (click)="selectCharacter(character)">
     <mat-card>
     
       <img mat-card-image src="{{ character?.id | idToImage }}" alt="{{ character?.name }}">
